# home-watcher

./: .gitignore  Dockerfile  README.md  SETUP.md  pyproject.toml
.github/workflows/: build.yml
scripts/: upload_faces.sh
src/home_watcher/: config.py  main.py
src/home_watcher/bodies/: db.py  reid.py
src/home_watcher/decision/: scorer.py
src/home_watcher/faces/: db.py  recognizer.py  unknown_db.py
src/home_watcher/notifier/: ntfy.py
src/home_watcher/pets/: db.py  detector.py  reid.py
src/home_watcher/presence/: unifi_clients.py
src/home_watcher/protect/: client.py  events.py  poller.py  websocket.py
src/home_watcher/skeleton/: analyzer.py  db.py  matcher.py
src/home_watcher/trajectory/: db.py  matcher.py  tracker.py
src/home_watcher/vehicles/: db.py  reid.py
tests/: test_db.py  test_events.py  test_pet_db.py  test_pet_reid.py  test_scorer.py  test_trajectory.py  test_unknown_db.py  test_vehicle_reid.py
